@@ -80,6 +80,16 @@ class TimeEntryReportsControllerTest < ActionController::TestCase
     assert_equal "162.90", "%.2f" % assigns(:report).total_hours
   end
 
+  def test_report_custom_field_criteria_with_multiple_values
+    field = TimeEntryCustomField.create!(:name => 'multi', :field_format => 'list', :possible_values => ['value1', 'value2'])
+    entry = TimeEntry.create!(:project => Project.find(1), :hours => 1, :activity_id => 10, :user => User.find(2), :spent_on => Date.today)
+    CustomValue.create!(:customized => entry, :custom_field => field, :value => 'value1')
+    CustomValue.create!(:customized => entry, :custom_field => field, :value => 'value2')
+
+    get :report, :project_id => 1, :columns => 'day', :criteria => ["cf_#{field.id}"]
+    assert_response :success
+  end
+
   def test_report_one_day
     get :report, :project_id => 1, :columns => 'day', :from => "2007-03-23", :to => "2007-03-23", :criteria => ["member", "activity"]
     assert_response :success
